--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -8,10 +8,12 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/loginStyles.css"/>
     <!-- endbuild -->
   </head>
   <body ng-app="webTrivialWikiApp">
@@ -100,18 +102,21 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/ng-facebook/ngFacebook.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/common.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/User/userService.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/User/Login/loginService.js"></script>
     <script src="scripts/User/Login/loginController.js"></script>
     <script src="scripts/User/SignUp/signUpService.js"></script>
     <script src="scripts/User/SignUp/signUpController.js"></script>
+    <script src="scripts/config.js"></script>
     <!-- endbuild -->
 </body>
 </html>
