--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -99,6 +99,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/common.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/User/persistService.js"></script>
     <script src="scripts/User/userService.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/about.js"></script>
