Massive modifications regarding users CRUD

--- a/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
+++ b/WebTrivialWiki/app/scripts/directives/header/headerMenu.tmpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="header headerContainer">
     <div class="wikiLogo row">
-        <img class="hidden-xs wiki-logo-image" src="images/wikipedia-icon.png" ng-click="javascript(0);" />
+        <img class="wiki-logo-image" src="images/wikipedia-icon.png" ng-click="javascript(0);" />
         <span class="wikiTitle" ng-click="javascript(0);">WikiTrivia</span>
         <ul class="navigation-bar">
             <li class="hvr-underline-from-center small-padding-bottom">
