--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -10,7 +10,9 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="bower_components/hover/css/hover.css" />
+    <link rel="stylesheet" href="bower_components/angular-growl-v2/build/angular-growl.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -18,6 +20,9 @@
       <link rel="stylesheet" href="styles/loginStyles.css"/>
       <link rel="stylesheet" href="styles/header.css"/>
       <link rel="stylesheet" href="styles/general.css"/>
+      <link rel="stylesheet" href="styles/fixedHeaderTable/styles.css"/>
+      <link rel="stylesheet" href="styles/modals/confirmationModal.css"/>
+      <link rel="stylesheet" href="styles/modals/updateUserModal.css" />
     <!-- endbuild -->
   </head>
   <body ng-app="webTrivialWikiApp" on-scroll>
@@ -25,22 +30,23 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-  <div>
-      <!-- ReSharper disable Html.TagNotResolved -->
-      <header-menu></header-menu>
-      <!-- ReSharper restore Html.TagNotResolved -->
-  </div>
+    <div>
+        <!-- ReSharper disable Html.TagNotResolved -->
+        <header-menu></header-menu>
+        <!-- ReSharper restore Html.TagNotResolved -->
+    </div>
 
-    <div class="container">
-        <div class="views" ng-view=""></div>
+    <div class="" style="width: 100% !important;">
+        <div class="views" style="" ng-view=""></div>
     </div>
 
     <div class="footer">
         <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> </p>
+            <p><span class="glyphicon glyphicon-heart"></span> </p>
         </div>
     </div>
 
+    <div growl></div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -55,16 +61,17 @@
     <script src="bower_components/ng-facebook/ngFacebook.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/common.js"></script>
+    <script src="scripts/Admin/adminModule.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="scripts/User/persistService.js"></script>
     <script src="scripts/User/userService.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
     <script src="scripts/User/Login/loginService.js"></script>
     <script src="scripts/User/Login/loginController.js"></script>
     <script src="scripts/User/SignUp/signUpService.js"></script>
@@ -73,5 +80,10 @@
     <script src="scripts/directives/header/headerDirective.js"></script>
     <script src="scripts/directives/header/headerController.js"></script>
     <script src="scripts/directives/header/onScrollDirective.js"></script>
+    <script src="scripts/Admin/ManageUsers/manageUsersController.js"></script>
+    <script src="scripts/Admin/ManageUsers/manageUsersService.js"></script>\
+    <script src="scripts/Admin/ManageUsers/Modals/confirmDeleteController.js"></script>
+    <script src="scripts/Admin/ManageUsers/Modals/updateUserController.js"></script>
+    <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
   </body>
 </html>
