--- a/WebTrivialWiki/app/scripts/Admin/ManageUsers/manageUsers.tmpl.html
+++ b/WebTrivialWiki/app/scripts/Admin/ManageUsers/manageUsers.tmpl.html
@@ -1,7 +1,8 @@
 ﻿<div class="table-container">
-    <button class="btn btn-default small-margin-top small-margin-bottom" ng-click="addNewUser()">Add new user</button>
+    <button class="btn btn-default small-margin-top small-margin-bottom col-md-2" ng-click="addNewUser()">Add new user</button>
+    <input class="user-search-input small-margin-left small-margin-top small-margin-bottom col-md-3" placeholder="Search user.." ng-model="queryString"/>
 
-    <table class="table users-table">
+    <table class="table users-table" ng-show="users.length > 0">
         <thead class="users-table-header">
         <tr class="">
             <th class="col-md-2">Username</th>
@@ -27,8 +28,11 @@
         </tbody>
     </table>
 
+    <div class="row" ng-show="users.length === 0">
+        <p class="col-md-10">No users found for " {{queryString}} "</p>
+    </div>
     <!-- ReSharper disable Html.TagNotResolved -->
-    <uib-pagination total-items="numberOfUsers" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination>
+    <uib-pagination total-items="numberOfUsers" ng-model="currentPage" ng-show="users.length > 0" ng-change="pageChanged()"></uib-pagination>
     <!-- ReSharper restore Html.TagNotResolved -->
 </div>
 
