Changed some ui on web solution

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -19,9 +19,10 @@
       <link rel="stylesheet" href="styles/loginStyles.css"/>
       <link rel="stylesheet" href="styles/header.css"/>
       <link rel="stylesheet" href="styles/general.css"/>
-      <link rel="stylesheet" href="styles/fixedHeaderTable/styles.css"/>
       <link rel="stylesheet" href="styles/modals/confirmationModal.css"/>
       <link rel="stylesheet" href="styles/modals/updateUserModal.css" />
+      <link rel="stylesheet" href="styles/adminStyles.css" />
+
     <!-- endbuild -->
   </head>
   <body ng-app="webTrivialWikiApp" on-scroll>
@@ -41,7 +42,6 @@
 
     <div class="footer">
         <div class="container">
-            <p><span class="glyphicon glyphicon-heart"></span> </p>
         </div>
     </div>
 
