--- a/WebTrivialWiki/app/scripts/Admin/ManageUsers/Modals/addNewUserModal.html
+++ b/WebTrivialWiki/app/scripts/Admin/ManageUsers/Modals/addNewUserModal.html
@@ -18,6 +18,8 @@
         <input class="col-md-7" type="password" ng-model="user.password" />
     </span>
 
-    <button class="confirm-button" title="Confirm" ng-click="saveUser()">Save</button>
-    <button class="cancel-button" title="Cancel" ng-click="cancel()">Cancel</button>
+    <div>
+        <button class="confirm-button" title="Confirm" ng-click="saveUser()">Save</button>
+        <button class="cancel-button" title="Cancel" ng-click="cancel()">Cancel</button>
+    </div>
 </div>
