--- a/WebTrivialWiki/app/scripts/Admin/ManageUsers/Modals/updateUserModal.html
+++ b/WebTrivialWiki/app/scripts/Admin/ManageUsers/Modals/updateUserModal.html
@@ -29,6 +29,8 @@
         <input class="col-md-7" type="text" ng-model="user.rank" disabled />
     </span>
 
-    <button class="confirm-button" title="Confirm" ng-click="updateUser()">Update</button>
-    <button class="cancel-button" title="Cancel" ng-click="cancel()">Cancel</button>
+    <div>
+        <button class="confirm-button" title="Confirm" ng-click="updateUser()">Update</button>
+        <button class="cancel-button" title="Cancel" ng-click="cancel()">Cancel</button>
+    </div>
 </div>
