--- a/WebTrivialWiki/app/scripts/User/Login/loginModal.tmpl.html
+++ b/WebTrivialWiki/app/scripts/User/Login/loginModal.tmpl.html
@@ -4,8 +4,7 @@
         <input id="username" type="text" placeholder="Username" ng-model="username" />
         <input id="password" type="password" placeholder="Password" ng-model="password"/>
         <p class="errorMessage" ng-show="credentialsAreInvalid">Invalid credentials.</p>
-        <button title="Login" ng-click="login()">Start playing</button>
-        <button class="signUpButton" title="Register" ng-click="openRegisterModal()">New to the site</button>
+        <button title="Login" ng-click="login()">Play</button>
         <div id="facebookLink">
             <i class="fa fa-facebook" title="Login with facebook" ng-click="loginWithFacebook()"></i>
         </div>
