Partially finished chat functionality

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -64,6 +64,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <script src="bower_components/signalr/jquery.signalR.js"></script>
+    <script src="bower_components/angular-signalr-hub/signalr-hub.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -89,5 +90,8 @@
     <script src="scripts/Admin/ManageUsers/Modals/updateUserController.js"></script>
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
+    <script src="scripts/Trivia/signalRFactory.js"></script>
+    <script src="scripts/Trivia/Game/chatService.js"></script>
+
   </body>
 </html>
