Started photo upload

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/angular-growl-v2/build/angular-growl.js"></script>
     <script src="bower_components/signalr/jquery.signalR.js"></script>
     <script src="bower_components/angular-signalr-hub/signalr-hub.js"></script>
+    <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
