Modified web header

--- a/WebTrivialWiki/app/scripts/User/Settings/settings.html
+++ b/WebTrivialWiki/app/scripts/User/Settings/settings.html
@@ -1,16 +1,16 @@
-﻿<div style="width: 200px;">
-    <div class="area"></div>
-    <nav class="main-menu">
+﻿<div style="margin-top: -61px;">
+    <div class="area" style="margin-top: -61px;"></div>
+    <nav class="main-menu" style="">
         <ul>
-            <li>
-                <a class="pointer-cursor">
+            <li title="Profile">
+                <a class="pointer-cursor" >
                     <i class="fa fa-home fa-2x"></i>
                     <span class="nav-text">
                         Profile
                     </span>
                 </a>
             </li>
-            <li class="has-subnav">
+            <li title="Friends">
                 <a class="pointer-cursor">
                     <i class="fa fa-list fa-2x"></i>
                     <span class="nav-text">
@@ -19,7 +19,7 @@
                 </a>
 
             </li>
-            <li class="has-subnav">
+            <li title="Matches">
                 <a class="pointer-cursor">
                     <i class="fa fa-gamepad fa-2x"></i>
                     <span class="nav-text">
@@ -28,7 +28,7 @@
                 </a>
 
             </li>
-            <li>
+            <li title="Statistics">
                 <a class="pointer-cursor">
                     <i class="fa fa-bar-chart-o fa-2x"></i>
                     <span class="nav-text">
@@ -37,12 +37,12 @@
                 </a>
             </li>
         </ul>
-        <ul class="logout">
+        <ul class="logout" title="Sign out">
             <li>
                 <a class="pointer-cursor" ng-click="signOut()">
                     <i class="fa fa-power-off fa-2x"></i>
                     <span class="nav-text">
-                        Logout
+                        Sign out
                     </span>
                 </a>
             </li>
