more on picture upload

--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -66,6 +66,7 @@
     <script src="bower_components/signalr/jquery.signalR.js"></script>
     <script src="bower_components/angular-signalr-hub/signalr-hub.js"></script>
     <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
+    <script src="bower_components/angular-img-cropper/dist/angular-img-cropper.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -92,7 +93,8 @@
     <script src="scripts/Admin/ManageUsers/Modals/addNewUserController.js"></script>
     <script src="scripts/User/Settings/settingsController.js"></script>
     <script src="scripts/Trivia/signalRFactory.js"></script>
-  <script src="scripts/Trivia/Game/chatService.js"></script>
-
+    <script src="scripts/Trivia/Game/chatService.js"></script>
+    <script src="scripts/User/Settings/ChangeAvatar/changeAvatarController.js"></script>
+    <script src="scripts/User/Settings/ChangeAvatar/changeAvatarService.js"></script>
   </body>
 </html>
