--- a/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
+++ b/WebTrivialWiki/app/scripts/Trivia/Game/trivia.html
@@ -1,105 +1,26 @@
-﻿<div class="chat-container">
-    <div class="show-users-icon">
-        <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
-
-        <input ng-model="message" class="form-control" placeholder="message"/>
-        <button class="btn btn-default" ng-click="sendMessage();">Send</button>
+﻿<div style="position: absolute; width: 22%; right: 0;">
+    <div class="chat-container" style="">
+        <div>
+            <div style="overflow: auto; max-height: calc(100vh - 160px);" class="chat-messages">
+                <div ng-repeat="message in messages" style="max-width: 100%; max-height: 40px;">
+                    <p style="text-overflow: ellipsis; overflow: hidden;">{{message.message}}</p>
+                </div>
+            </div>
+            <div class="form-group" style="width: 90%; margin-left: 5%; bottom: 1%;">
+                <div class="input-group input-group-sm">
+                    <div class="icon-addon addon-md">
+                        <input type="text" placeholder="Send message" class="form-control chat-input" style="">
+                    </div>
+                    <span class="input-group-btn send-message-container" style="">
+                        <button class="btn btn-default send-message-button" style="" type="button" ng-click="sendMessage();" title="Send" style="border: none;">
+                            <i class="fa fa-send send-message-gliphy" ></i>
+                        </button>
+                    </span>
+                </div>
+            </div>
+        </div>
     </div>
-    <div ng-repeat="message in messages">{{message}}</div>
 </div>
 
+<img ng-src="http://localhost:4605/avatar/ionut"/>
 
-<!--<div class="chat-container">
-    <div class="demo">
-        <svg class="sidebar">
-            <path class="s-path" fill="#fff" d="M0,0 50,0 a0,900 100 1,1 0,900 L0,900" />
-        </svg>
-        <div class="static">
-
-
-
-            <div class="static__text">Pull white sidebar to the right</div>
-        </div>
-        <div class="sidebar-content">
-            <div class="contact">
-                <img src="http://i.imgur.com/ae5r9VA.png" alt="" class="contact__photo" />
-                <span class="contact__name">Ethan Hawke</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/tnMJGyT.png" alt="" class="contact__photo" />
-                <span class="contact__name">Natalie Portman</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/ae5r9VA.png" alt="" class="contact__photo" />
-                <span class="contact__name">Kevin Spacey</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/tnMJGyT.png" alt="" class="contact__photo" />
-                <span class="contact__name">Rosamund Pike</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/ae5r9VA.png" alt="" class="contact__photo" />
-                <span class="contact__name">Robert Redford</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/tnMJGyT.png" alt="" class="contact__photo" />
-                <span class="contact__name">Scarlett Johansson</span>
-                <span class="contact__status online"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/ae5r9VA.png" alt="" class="contact__photo" />
-                <span class="contact__name">Tom Cruise</span>
-                <span class="contact__status"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/tnMJGyT.png" alt="" class="contact__photo" />
-                <span class="contact__name">Eva Green</span>
-                <span class="contact__status"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/ae5r9VA.png" alt="" class="contact__photo" />
-                <span class="contact__name">Paul Newman</span>
-                <span class="contact__status"></span>
-            </div>
-            <div class="contact">
-                <img src="http://i.imgur.com/tnMJGyT.png" alt="" class="contact__photo" />
-                <span class="contact__name">Thomas Break</span>
-                <span class="contact__status"></span>
-            </div>
-            <div class="search">
-                <img src="http://i.imgur.com/t8TeL1S.png" alt="" class="search__img" />
-                <input type="text" class="search__input" placeholder="Search" />
-            </div>
-        </div>
-        <div class="chat">
-            <span class="chat__back"></span>
-            <span class="chat__status">status</span>
-            <div class="chat__person">
-                <span class="chat__online active"></span>
-                <span class="chat__name">Huehue Huehue</span>
-            </div>
-            <div class="chat__messages">
-                <div class="chat__msgRow">
-                    <div class="chat__message mine">Such SVG, much Javascript, very CSS!</div>
-                </div>
-                <div class="chat__msgRow">
-                    <div class="chat__message notMine">Wow!</div>
-                </div>
-                <div class="chat__msgRow">
-                    <div class="chat__message notMine">Very elastic! Such easings!</div>
-                </div>
-                <div class="chat__msgRow">
-                    <div class="chat__message mine">
-                        Check out my other <a href="http://codepen.io/suez/public/" target="_blank">pens</a>
-                    </div>
-                </div>
-            </div>
-            <input type="text" class="chat__input" placeholder="Your message" />
-        </div>
-    </div>
-</div>-->
