--- a/WebTrivialWiki/app/index.html
+++ b/WebTrivialWiki/app/index.html
@@ -23,7 +23,9 @@
       <link rel="stylesheet" href="styles/modals/updateUserModal.css" />
       <link rel="stylesheet" href="styles/adminStyles.css" />
       <link rel="stylesheet" href="styles/trivia/chat.css"/>
-      <link rel="stylesheet" href="styles/settings/settings.css" />
+      <link rel="stylesheet" href="styles/trivia/generalTrivia.css" />
+      <link rel="stylesheet" href="styles/settings/settings.css"/>
+
 
     <!-- endbuild -->
   </head>
@@ -38,8 +40,8 @@
         <!-- ReSharper restore Html.TagNotResolved -->
     </div>
 
-    <div class="" style="width: 100% !important;">
-        <div class="views " style="" ng-view=""></div>
+    <div style="width: 100% !important;">
+        <div class="views" ng-view=""></div>
     </div>
 
     <div class="footer">
@@ -67,6 +69,7 @@
     <script src="bower_components/angular-signalr-hub/signalr-hub.js"></script>
     <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="bower_components/angular-img-cropper/dist/angular-img-cropper.min.js"></script>
+    <script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
