--- a/WebTrivialWiki/app/scripts/User/Settings/settings.html
+++ b/WebTrivialWiki/app/scripts/User/Settings/settings.html
@@ -1,5 +1,5 @@
-﻿<div style="margin-top: -61px;">
-    <div class="area" style="margin-top: -61px;"></div>
+﻿<div>
+    <div class="area"></div>
     <nav class="main-menu" style="">
         <ul>
             <li title="Profile">
@@ -49,24 +49,15 @@
         </ul>
     </nav>
 </div>
-<div class="settings-container panel">
-    <!--<div class="panel-heading" style="background-color: black; opacity: 0.7;">
-        <div>
-            <i class="fa fa-home fa-2x"></i>
-            <span class="nav-text">
-                Profile
-            </span>
-        </div>
-    </div>-->
-    <!--<input id="fileInput" type="file" class="image-uploader" img-cropper-fileread image="cropper.sourceImage"/>-->
+<div class="settings-container panel" style="top: 60px;">
     <div class="panel-body setting-body">
-        <div class="box">
-            <img ng-show="!userHasAvatar()" src="../../../images/default_avatar.png" ng-click="triggerUpload()"/>
-            <img ng-show="userHasAvatar()" ng-src="data:image/JPEG;base64,{{avatar}}" ng-click="triggerUpload()">
+        <div class="box" ng-click="triggerUpload()">
+            <!--<img ng-show="!userHasAvatar()" src="../../../images/default_avatar.png" ng-click="triggerUpload()"/>-->
+            <img  src="http://localhost:4605/avatar/{{getCurrentUserName()}}"/>
             <span class="caption simple-caption" >
                 <p>Change avatar</p>
             </span>
         </div>
-        <input id="fileInput" type="file" class="image-uploader" img-cropper-fileread image="cropper.sourceImage" />
+        <input id="fileInput" type="file" class="image-uploader" img-cropper-fileread image="cropper.sourceImage"/>
     </div>
 </div>
