--- a/WebTrivialWiki/app/scripts/User/Settings/settings.html
+++ b/WebTrivialWiki/app/scripts/User/Settings/settings.html
@@ -49,14 +49,37 @@
         </ul>
     </nav>
 </div>
-<div class="settings-container panel" style="top: 60px;">
+<div class="settings-container panel" style="top: 60px; position: absolute;">
     <div class="panel-body setting-body">
-        <div class="box" ng-click="triggerUpload()">
-            <!--<img ng-show="!userHasAvatar()" src="../../../images/default_avatar.png" ng-click="triggerUpload()"/>-->
-            <img  src="http://localhost:4605/avatar/{{getCurrentUserName()}}"/>
-            <span class="caption simple-caption" >
-                <p>Change avatar</p>
-            </span>
+        <div class="row">
+            <div class="box col-lg-4 col-md-4 col-sm-5 col-xs-6" ng-click="triggerUpload()">
+                <!--<img ng-show="!userHasAvatar()" src="../../../images/default_avatar.png" ng-click="triggerUpload()"/>-->
+                <img src="http://localhost:4605/avatar/{{userName}}" alt="Profile pic"/>
+                <span class="caption simple-caption">
+                    <p>Change avatar</p>
+                </span>
+            </div>
+
+            <div class="col-lg-8 col-md-7 col-sm-6 col-xs-5 user-data">
+                <div style="padding-left: 2%; padding-top: 1%;">
+                    <div class="row settings-info-item">
+                        You are currently on the <b>{{userRank}}</b>
+                        <span ng-if="userRank === 1"><b>st</b> position</span>
+                        <span ng-if="userRank === 2"><b>nd</b> position</span>
+                        <span ng-if="userRank === 3"><b>rd</b> position</span>
+                        <span ng-if="userRank > 3"><b>th</b> position</span>
+                    </div>
+                    <div class="row settings-info-item small-margin-top">
+                        Account active since <b>{{accountCreationDate}}</b>
+                    </div>
+                    <div class="row settings-info-item small-margin-top">
+                        You have <b>{{userPoints}}</b> points
+                    </div>
+                    <div class="row settings-info-item small-margin-top" >
+                        <button class="btn btn-default no-radius-button changePassword-button" ng-click="openChangePasswordModal()">Change password</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <input id="fileInput" type="file" class="image-uploader" img-cropper-fileread image="cropper.sourceImage"/>
     </div>
